--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.4",
     "echarts": "^5.4.1",
     "element-plus": "^2.2.33",
+    "js-cookie": "^3.0.1",
     "less-loader": "^11.1.0",
     "mockjs": "^1.1.0",
     "unplugin-icons": "^0.15.3",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@iconify-json/ep": "^1.1.9",
     "@rushstack/eslint-patch": "^1.2.0",
+    "@types/js-cookie": "^3.0.3",
     "@types/mockjs": "^1.0.7",
     "@types/node": "^18.14.2",
     "@vitejs/plugin-vue": "^4.0.0",
